@@ -26,6 +26,7 @@ munin (work)
   * Plugin: New version of generic/pm3users_ by plugin creator Jacques Caruso.
   * Plugin: generic/bind9 now handles syslog format as well (by xavier).
   * Plugin: Two new contrib plugins generic/foldingathome_*, by xavier.
+  * Plugin: generic/named a bit more portable (by Will Froning).
 
 munin (1.1.7)
 
